Creating bank conversation, bank instance validator

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,148 +1,122 @@
 {
-  "about": "About the release:\n\nMemer the Bot\nℹ️ Version: :version\n\uD83D\uDDA5 Powered by PHP :php_version, Botman (Laravel)\n\nLinks:\n\uD83D\uDD38 Wiki - :wiki\n\uD83D\uDD38 Telegram - :tg\n\uD83D\uDD38 VK - :vk\n\uD83D\uDD38 Github - :github\n",
-
-  "greetings": "He-hey, howdy! Nice to meet you.",
-
-  "pattern.cancel-conversation": ".*cancel",
-  "pattern.menu-start": ".*(start|menu|main menu|main_menu)",
-  "pattern.create-meme-conversation": ".*((create|make|new|my|draw|construct|build).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|create_meme)",
-  "pattern.generate-meme-conversation": ".*((generate|gen|imagine|ai|send|do).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|generate_meme)",
-  "pattern.about-conversation": ".*(about|version|bot version|ver)",
-  "pattern.admin-menu": ".*(admin|adm|admn|adn|manage|admin menu|moderate|moderator|administrator)",
-  "pattern.language-selection": ".*(language|lang|change language|locale|localization|loc|change locale|\uD83C\uDF10|\uD83C\uDF0D|\uD83C\uDF0E|\uD83C\uDF0F)",
-
-  "pagination.previous": "<< Previous",
-  "pagination.next": "Next >>",
-
-  "menu.title": "Main menu:",
-  "menu.back": "Back",
-
-  "menu.options.generate-meme": "☺ Generate a meme",
-  "menu.options.create-meme": "\uD83D\uDD8C Create a meme",
-  "menu.options.settings": "⚙ Settings",
-  "menu.options.about-release": "ℹ️ About",
-
-  "when-meme.title": "'When...' meme",
-  "4-frame-comics-meme.title": "4-frame comics meme",
-  "demotivational-poster-meme.title": "Demotivational meme",
-
-  "create-meme-conversation.ask-meme-type": "Choose the meme to be created:",
-  "create-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
-
-  "create-when-meme-conversation.step-1": "[Step 1/3]\nSend an image of a meme.",
-  "create-when-meme-conversation.step-2": "[Step 2/3]\nSend top text of a meme.",
-  "create-when-meme-conversation.step-3": "[Step 3/3]\nSend bottom text of a meme.",
-  "create-when-meme-conversation.done": "Here it is:",
-
-  "create-comics-meme-conversation.step-1": "[Step 1/8]\nSend image of the 1st frame.",
-  "create-comics-meme-conversation.step-2": "[Step 2/8]\nSend image of the 2nd frame.",
-  "create-comics-meme-conversation.step-3": "[Step 3/8]\nSend image of the 3rd frame.",
-  "create-comics-meme-conversation.step-4": "[Step 4/8]\nSend image of the 4th frame.",
-  "create-comics-meme-conversation.step-5": "[Step 5/8]\nSend text of the 1st frame.",
-  "create-comics-meme-conversation.step-6": "[Step 6/8]\nSend text of the 2nd frame.",
-  "create-comics-meme-conversation.step-7": "[Step 7/8]\nSend text of the 3rd frame.",
-  "create-comics-meme-conversation.step-8": "[Step 8/8]\nSend text of the 4th frame.",
-  "create-comics-meme-conversation.done": "Here it is:",
-
-  "create-demotivational-poster-meme-conversation.step-1": "[Step 1/3]\nSend an image of a meme.",
-  "create-demotivational-poster-meme-conversation.step-2": "[Step 2/3]\nSend title of a meme.",
-  "create-demotivational-poster-meme-conversation.step-3": "[Step 3/3]\nSend subtitle of a meme.",
-  "create-demotivational-poster-meme-conversation.done": "Here it is:",
-
-  "generate-meme-conversation.ask-meme-type": "Choose the meme to be generated:",
-
-  "generate-meme.hint": "Generating ':screenName' meme menu:",
-  "generate-meme.execute": "\uD83D\uDE03 Generate new meme",
-  "generate-meme.edit-bank-list": "✏️Edit used data-packs",
-  "generate-meme-conversation.generating-error": "Error generating meme =(",
-  "generate-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
-  "generate-meme-conversation.unknown-command": "Couldn't find that menu option, sorry.",
-
-  "generate-meme.regexp.when-word": "When",
-
-
-
-
-  "settings-types.font.title": "Text font look",
-  "settings-types.font.description": "The font look of texts in memes (applied for this chat only).",
-
-  "settings-types.color.title": "Text color",
-  "settings-types.color.description": "The color of texts in memes (applied for this chat only).",
-
-  "settings-types.shadow.color.title": "Text shadow font",
-  "settings-types.shadow.color.description": "The color of shadows of texts in memes (applied for this chat only).",
-
-  "settings-types.demotivational.bg.color.title": "Demotivator's background color",
-  "settings-types.demotivational.bg.color.description": "The background color of a demotivational poster meme.",
-
-  "settings-types.demotivational.border.color.title": "Demotivator's border color",
-  "settings-types.demotivational.border.color.description": "The border color of a demotivational poster meme.",
-
-  "settings-types.show-author.title": "Mention me",
-  "settings-types.show-author.description": "Make messaging platform, ID, Name and Surname (or just username) of current user be mentioned in the meme's description.\nNote: mentioning is applied only for generated memes, user-made memes are not public.",
-
-
-
-  "admin-menu.manage-banks": "Manage content banks",
-
-  "chain.generic-word": "generic",
-
-  "manage-bank.back": "<< Back",
-  "manage-bank.info": "ℹ️ Bank (data-pack) information.\n\n\uD83C\uDD94 ID: :Id\n\uD83D\uDCAC Title: :Title\n\uD83D\uDCC4 Description: :Description\n\uD83D\uDD52 Created: :Created_at\n\uD83D\uDD52 Updated: :Updated_at\n\uD83D\uDC64 Conversation ID: :Conversation_id\n\uD83D\uDC64 Conversation title: :conversation_title",
-  "manage-bank.not-found-error": "Bank (data-pack) was internally deleted or moved (not found).",
-
-  "manage-bank.see-full-description": "\uD83D\uDCC4 See full description",
-  "manage-bank.edit": "✏ Edit",
-  "manage-bank.delete": "\uD83D\uDDD1 Delete",
-  "manage-bank.learn-a-text": "\uD83D\uDCDC Learn a text",
-  "manage-bank.push-an-image": "\uD83C\uDF05 Push an image",
-  "manage-bank.refresh-info": "\uD83D\uDD01 Refresh information",
-
-  "manage-bank.enter-new-title": "Enter new title:\n(current title: :Title)",
-  "manage-bank.enter-new-description": "Enter new description:\n(current description: :Description)",
-  "manage-bank.rename-done": "Done.",
-  "manage-bank.error-exception": "Sorry, but something went wrong while managing the bank: ",
-
-  "chaining-bank.hint": "chaining-bank.hint",
-  "chaining-bank.random-menu.random-result": "Generated pairs:\n:list",
-
-  "chaining-bank.random-menu": "Random picking",
-  "chaining-bank.learn-from-text": "Learn the text",
-  "chaining-bank.learn-the-pair": "Learn the pair",
-  "chaining-bank.edit-chains": "Edit chains",
-
-  "chaining-bank.learn-the-pair.type-target-word": "Enter the first word (phrase) of the pair:",
-  "chaining-bank.learn-the-pair.type-next-word": "Enter the second word (phrase) of the pair:",
-  "chaining-bank.learn-the-pair.success": "Done, the pair is remembered.",
-  "chaining-bank.learn-the-text.send-the-text": "Send me text to learn (to make pairs and remember).\n\nPunctuation marks to divide sentences: . ... ! ? ?! !?",
-  "chaining-bank.learn-the-text.success": "Not bad.",
-
-  "chaining-bank.random-menu.hint": "Choose the number of pairs to be generated:",
-  "chaining-bank.random-menu.do-once": "1 pair",
-  "chaining-bank.random-menu.do-3-times": "3 pairs",
-  "chaining-bank.random-menu.do-5-times": "5 pairs",
-  "chaining-bank.random-menu.do-10-times": "10 pairs",
-
-
-  "language.selection-empty": "No languages available.",
-  "language.hint": "Select language:",
-  "language.selection.previous": "<<",
-  "language.selection.next": ">>",
-  "language.selection.done": "Current locale set to: :LOCALE",
-
-  "language.selection-error": "Current language is not available for now: English will be used instead. Type 'lang' to see the list of available ones.",
-  "unknown-option-selected": "Unknown option selected.",
-  "unexpected-error": "Sorry, but something went wrong.",
-
-  "unknown-command.phrase-type-menu": "\nType 'menu' to view menu options.",
-  "unknown-command.phrase-1": "Sorry, but I didn't understand you \uD83D\uDE12",
-  "unknown-command.phrase-2": "I can't find the right pattern to answer your request \uD83D\uDE12",
-  "unknown-command.phrase-3": "Incorrect command.",
-  "unknown-command.phrase-4": "Well... sounds good, but I still can't understand you.",
-  "unknown-command.phrase-5": "[COMMAND NOT FOUND]",
-  "unknown-command.phrase-6": "Wow... I can't even say anything...",
-  "unknown-command.phrase-7": "Unknown command pattern."
-
-
-
+    "4-frame-comics-meme.title": "4-frame comics meme",
+    "about": "About the release:\n\nMemer the Bot\nℹ️ Version: :version\n🖥 Powered by PHP :php_version, Botman (Laravel)\n\nLinks:\n🔸 Wiki - :wiki\n🔸 Telegram - :tg\n🔸 VK - :vk\n🔸 Github - :github\n",
+    "admin-menu.ask-option-type": "👑 Menu:",
+    "admin-menu.manage-banks": "📝 Manage content banks",
+    "bank-list.create-new-bank": "Create new bank",
+    "bank-list.empty-hint": "⚠️ No banks found",
+    "chain.generic-word": "generic",
+    "chaining-bank.edit-chains": "Edit chains",
+    "chaining-bank.hint": "chaining-bank.hint",
+    "chaining-bank.learn-from-text": "Learn the text",
+    "chaining-bank.learn-the-pair": "Learn the pair",
+    "chaining-bank.learn-the-pair.success": "Done, the pair is remembered.",
+    "chaining-bank.learn-the-pair.type-next-word": "Enter the second word (phrase) of the pair:",
+    "chaining-bank.learn-the-pair.type-target-word": "Enter the first word (phrase) of the pair:",
+    "chaining-bank.learn-the-text.send-the-text": "Send me text to learn (to make pairs and remember).\n\nPunctuation marks to divide sentences: . ... ! ? ?! !?",
+    "chaining-bank.learn-the-text.success": "Not bad.",
+    "chaining-bank.random-menu": "Random picking",
+    "chaining-bank.random-menu.do-10-times": "10 pairs",
+    "chaining-bank.random-menu.do-3-times": "3 pairs",
+    "chaining-bank.random-menu.do-5-times": "5 pairs",
+    "chaining-bank.random-menu.do-once": "1 pair",
+    "chaining-bank.random-menu.hint": "Choose the number of pairs to be generated:",
+    "chaining-bank.random-menu.random-result": "Generated pairs:\n:list",
+    "choice.no": "No",
+    "choice.yes": "Yes",
+    "create-bank.ask-if-private": "Make available for everyone? (y\/n)",
+    "create-bank.enter-description": "Enter description:",
+    "create-bank.enter-title": "Enter title:",
+    "create-bank.title": "[Creating new bank]",
+    "create-comics-meme-conversation.done": "Here it is:",
+    "create-comics-meme-conversation.step-1": "[Step 1\/8]\nSend image of the 1st frame.",
+    "create-comics-meme-conversation.step-2": "[Step 2\/8]\nSend image of the 2nd frame.",
+    "create-comics-meme-conversation.step-3": "[Step 3\/8]\nSend image of the 3rd frame.",
+    "create-comics-meme-conversation.step-4": "[Step 4\/8]\nSend image of the 4th frame.",
+    "create-comics-meme-conversation.step-5": "[Step 5\/8]\nSend text of the 1st frame.",
+    "create-comics-meme-conversation.step-6": "[Step 6\/8]\nSend text of the 2nd frame.",
+    "create-comics-meme-conversation.step-7": "[Step 7\/8]\nSend text of the 3rd frame.",
+    "create-comics-meme-conversation.step-8": "[Step 8\/8]\nSend text of the 4th frame.",
+    "create-demotivational-poster-meme-conversation.done": "Here it is:",
+    "create-demotivational-poster-meme-conversation.step-1": "[Step 1\/3]\nSend an image of a meme.",
+    "create-demotivational-poster-meme-conversation.step-2": "[Step 2\/3]\nSend title of a meme.",
+    "create-demotivational-poster-meme-conversation.step-3": "[Step 3\/3]\nSend subtitle of a meme.",
+    "create-meme-conversation.ask-meme-type": "Choose the meme to be created:",
+    "create-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
+    "create-when-meme-conversation.done": "Here it is:",
+    "create-when-meme-conversation.step-1": "[Step 1\/3]\nSend an image of a meme.",
+    "create-when-meme-conversation.step-2": "[Step 2\/3]\nSend top text of a meme.",
+    "create-when-meme-conversation.step-3": "[Step 3\/3]\nSend bottom text of a meme.",
+    "demotivational-poster-meme.title": "Demotivational meme",
+    "form.sending-error": "⚠️ Sending form error: some fields are filled incorrectly.\n\nDetails:\n:details",
+    "generate-meme-conversation.ask-meme-type": "Choose the meme to be generated:",
+    "generate-meme-conversation.generating-error": "Error generating meme =(",
+    "generate-meme-conversation.unknown-command": "Couldn't find that menu option, sorry.",
+    "generate-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
+    "generate-meme.edit-bank-list": "✏️Edit used data-packs",
+    "generate-meme.execute": "😃 Generate new meme",
+    "generate-meme.hint": "Generating ':screenName' meme menu:",
+    "generate-meme.regexp.when-word": "When",
+    "greetings": "He-hey, howdy! Nice to meet you.",
+    "language.hint": "Select language:",
+    "language.selection-empty": "No languages available.",
+    "language.selection-error": "Current language is not available for now: English will be used instead. Type 'lang' to see the list of available ones.",
+    "language.selection.done": "Current locale set to: :LOCALE",
+    "language.selection.next": ">>",
+    "language.selection.previous": "<<",
+    "manage-bank.back": "<< Back",
+    "manage-bank.delete": "🗑 Delete",
+    "manage-bank.edit": "✏ Edit",
+    "manage-bank.enter-new-description": "Enter new description:\n(current description: :Description)",
+    "manage-bank.enter-new-title": "Enter new title:\n(current title: :Title)",
+    "manage-bank.error-exception": "Sorry, but something went wrong while managing the bank: ",
+    "manage-bank.info": "ℹ️ Bank (data-pack) information.\n\n🆔 ID: :Id\n💬 Title: :Title\n📄 Description: :Description\n🕒 Created: :Created_at\n🕒 Updated: :Updated_at\n👤 Conversation ID: :Conversation_id\n👤 Conversation title: :conversation_title",
+    "manage-bank.learn-a-text": "📜 Learn a text",
+    "manage-bank.not-found-error": "Bank (data-pack) was internally deleted or moved (not found).",
+    "manage-bank.push-an-image": "🌅 Push an image",
+    "manage-bank.refresh-info": "🔁 Refresh information",
+    "manage-bank.rename-done": "Done.",
+    "manage-bank.see-full-description": "📄 See full description",
+    "menu.back": "<< Back",
+    "menu.options.about-release": "ℹ️ About",
+    "menu.options.admin": "👑 Admin menu",
+    "menu.options.create-meme": "🖌 Create a meme",
+    "menu.options.generate-meme": "☺ Generate a meme",
+    "menu.options.manage-banks": "📦 My banks",
+    "menu.options.settings": "⚙ Settings",
+    "menu.title": "Main menu:",
+    "pagination.next": "Next >>",
+    "pagination.previous": "<< Previous",
+    "pattern.about-conversation": ".*(about|version|bot version|ver)",
+    "pattern.admin-menu": ".*(admin|adm|admn|adn|manage|admin menu|moderate|moderator|administrator)",
+    "pattern.cancel-conversation": ".*cancel",
+    "pattern.create-meme-conversation": ".*((create|make|new|my|draw|construct|build).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|create_meme)",
+    "pattern.generate-meme-conversation": ".*((generate|gen|imagine|ai|send|do).*(a meme|meme|the meme|meme|mem|cool pic|pic|picture)|generate_meme)",
+    "pattern.language-selection": ".*(language|lang|change language|locale|localization|loc|change locale|🌐|🌍|🌎|🌏)",
+    "pattern.manage-banks": ".*(banks|my banks|manage banks|data-packs|data packs|data-pack|data pack|dp|manage_banks)",
+    "pattern.menu-start": ".*(start|menu|main menu|main_menu)",
+    "settings-types.color.description": "The color of texts in memes (applied for this chat only).",
+    "settings-types.color.title": "Text color",
+    "settings-types.demotivational.bg.color.description": "The background color of a demotivational poster meme.",
+    "settings-types.demotivational.bg.color.title": "Demotivator's background color",
+    "settings-types.demotivational.border.color.description": "The border color of a demotivational poster meme.",
+    "settings-types.demotivational.border.color.title": "Demotivator's border color",
+    "settings-types.font.description": "The font look of texts in memes (applied for this chat only).",
+    "settings-types.font.title": "Text font look",
+    "settings-types.shadow.color.description": "The color of shadows of texts in memes (applied for this chat only).",
+    "settings-types.shadow.color.title": "Text shadow font",
+    "settings-types.show-author.description": "Make messaging platform, ID, Name and Surname (or just username) of current user be mentioned in the meme's description.\nNote: mentioning is applied only for generated memes, user-made memes are not public.",
+    "settings-types.show-author.title": "Mention me",
+    "skip": "⤵️ Skip step",
+    "unexpected-error": "Sorry, but something went wrong.",
+    "unknown-command.phrase-1": "Sorry, but I didn't understand you 😒",
+    "unknown-command.phrase-2": "I can't find the right pattern to answer your request 😒",
+    "unknown-command.phrase-3": "Incorrect command.",
+    "unknown-command.phrase-4": "Well... sounds good, but I still can't understand you.",
+    "unknown-command.phrase-5": "[COMMAND NOT FOUND]",
+    "unknown-command.phrase-6": "Wow... I can't even say anything...",
+    "unknown-command.phrase-7": "Unknown command pattern.",
+    "unknown-command.phrase-type-menu": "\nType 'menu' to view menu options.",
+    "unknown-option-selected": "Unknown option selected.",
+    "when-meme.title": "'When...' meme"
 }
