--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,142 +1,120 @@
 {
-  "about": "О версии:\n\nБот Мемич\nℹ️ Версия: :version\n\uD83D\uDDA5 Работает на PHP :php_version, Botman (Laravel)\n\nСсылки:\n\uD83D\uDD38 Вики (справка) - :wiki\n\uD83D\uDD38 Telegram - :tg\n\uD83D\uDD38 VK - :vk\n\uD83D\uDD38 Github - :github\n",
-
-  "greetings": "Хе-хей, привет! Рад, что мне написали.",
-
-  "pattern.cancel-conversation": ".*отмена",
-  "pattern.menu-start": ".*(начать|меню|главное меню|главная|менюшка|менюха|главное_меню|main_menu)",
-  "pattern.create-meme-conversation": ".*((создать|запилить|сделать|разработать|нарисовать|построить|скрафтить|собрать|конструктор).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|create_meme)",
-  "pattern.generate-meme-conversation": ".*((сгенерировать|сгенерить|вообразить|аи|новый|генерить).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|generate_meme)",
-  "pattern.about-conversation": ".*(о боте|о проекте|версия|вер|ver)",
-  "pattern.admin-menu": ".*(админ|админка|управление|пу|меню админа|модерка|модерация|меню модератора|модератор|администратор|admin)",
-  "pattern.language-selection": ".*(сменить язык|язык|локализация|смена языка|изменить язык|выбор языка)",
-
-  "pagination.previous": "<< Назад",
-  "pagination.next": "Вперёд >>",
-
-  "menu.title": "Главное меню:",
-  "menu.back": "Назад",
-
-  "menu.options.generate-meme": "☺ Сгенерировать мем",
-  "menu.options.create-meme": "\uD83D\uDD8C Создать мем",
-  "menu.options.settings": "⚙ Настройки",
-  "menu.options.about-release": "ℹ️ О версии",
-
-  "when-meme.title": "Мем 'Когда...'",
-  "4-frame-comics-meme.title": "Четырёхблочный мем-комикс",
-  "demotivational-poster-meme.title": "Демотиватор",
-
-  "create-meme-conversation.ask-meme-type": "Выберите мем, который будет создан:",
-  "create-meme-conversation.unsupported-meme": "На текущий момент такие мемы я не умею делать, выбери другую категорию.",
-
-  "create-when-meme-conversation.step-1": "[Шаг 1/3]\nПришли картинку мема.",
-  "create-when-meme-conversation.step-2": "[Шаг 2/3]\nВведи верхний текст мема.",
-  "create-when-meme-conversation.step-3": "[Шаг 3/3]\nВведи нижний текст мема.",
-  "create-when-meme-conversation.done": "Готово:",
-
-  "create-comics-meme-conversation.step-1": "[Шаг 1/8]\nПришли картинку 1го блока.",
-  "create-comics-meme-conversation.step-2": "[Шаг 2/8]\nПришли картинку 2го блока.",
-  "create-comics-meme-conversation.step-3": "[Шаг 3/8]\nПришли картинку 3го блока.",
-  "create-comics-meme-conversation.step-4": "[Шаг 4/8]\nПришли картинку 4го блока.",
-  "create-comics-meme-conversation.step-5": "[Шаг 5/8]\nВведи текст 1го блока.",
-  "create-comics-meme-conversation.step-6": "[Шаг 6/8]\nВведи текст 2го блока.",
-  "create-comics-meme-conversation.step-7": "[Шаг 7/8]\nВведи текст 3го блока.",
-  "create-comics-meme-conversation.step-8": "[Шаг 8/8]\nВведи текст 4го блока.",
-  "create-comics-meme-conversation.done": "Готово:",
-
-  "create-demotivational-poster-meme-conversation.step-1": "[Шаг 1/3]\nПришли картинку мема.",
-  "create-demotivational-poster-meme-conversation.step-2": "[Шаг 2/3]\nВведи заголовок мема.",
-  "create-demotivational-poster-meme-conversation.step-3": "[Шаг 3/3]\nВведи подзаголовок мема.",
-  "create-demotivational-poster-meme-conversation.done": "Готово:",
-
-  "generate-meme-conversation.ask-meme-type": "Выбери мем, который будет сгенерирован:",
-  "generate-meme.hint": "Меню генерации мема ':screenName':",
-  "generate-meme.execute": "\uD83D\uDE03 Сгенерировать новый мем",
-  "generate-meme.edit-bank-list": "✏️Изменить список дата-паков",
-  "generate-meme-conversation.generating-error": "Ошибка генерации мема.",
-  "generate-meme-conversation.unsupported-meme": "На текущий момент такие мемы я не умею генерировать, выберите другую категорию.",
-  "generate-meme-conversation.unknown-command": "Такого пункта меню я не знаю.",
-
-  "generate-meme.regexp.when-word": "Когда",
-
-
-
-
-  "settings-types.font.title": "Шрифт текста",
-  "settings-types.font.description": "Шрифт текста в мемах (применяется только для этой беседы).",
-
-  "settings-types.color.title": "Цвет текста",
-  "settings-types.color.description": "Цвет текста в мемах (применяется только для этой беседы).",
-
-  "settings-types.shadow.color.title": "Цвет тени",
-  "settings-types.shadow.color.description": "Цвет тени текста в мемах (применяется только для этой беседы).",
-
-  "settings-types.demotivational.bg.color.title": "Цвет фона демотиватора",
-  "settings-types.demotivational.bg.color.description": "Настройка цвета фона мема-демотиватора.",
-
-  "settings-types.demotivational.border.color.title": "Цвет рамки демотиватора",
-  "settings-types.demotivational.border.color.description": "Настройка цвета рамки мема-демотиватора.",
-
-  "settings-types.show-author.title": "Отметить меня",
-  "settings-types.show-author.description": "Указать платформу чата, ID, имя и фамилию (или просто ник) текущего пользователя в описании мема. \nПримечание: отметка применима только к сгенерированным мемам, созданные пользователями мемы не находятся в публичном доступе.",
-
-
-  "chain.generic-word": "generic",
-
-  "manage-bank.back": "<< Назад",
-  "manage-bank.info": "ℹ️ Информация о банке (дата-паке).\n\n\uD83C\uDD94 ID: :Id\n\uD83D\uDCAC Наименование: :Title\n\uD83D\uDCC4 Описание: :Description\n\uD83D\uDD52 Создано: :Created_at\n\uD83D\uDD52 Обновлено: :Updated_at\n\uD83D\uDC64 ID чата: :Conversation_id\n\uD83D\uDC64 Наименование чата: :conversation_title",
-  "manage-bank.not-found-error": "Дата-пак был перемещен или удалён (не найден).",
-
-  "manage-bank.see-full-description": "\uD83D\uDCC4 Полное описание",
-  "manage-bank.edit": "✏ Редактировать",
-  "manage-bank.delete": "\uD83D\uDDD1 Удалить",
-  "manage-bank.learn-a-text": "\uD83D\uDCDC Обучиться словам",
-  "manage-bank.push-an-image": "\uD83C\uDF05 Добавить картинку",
-  "manage-bank.refresh-info": "\uD83D\uDD01 Обновить",
-
-  "manage-bank.enter-new-title": "Введи новое наименование:\n(текущее: :Title)",
-  "manage-bank.enter-new-description": "Введи новое описание:\n(текущее: :Description)",
-  "manage-bank.rename-done": "Готово.",
-  "manage-bank.error-exception": "Что-то пошло не так: ",
-
-  "chaining-bank.random-menu.random-result": "Созданные пары слов:\n:list",
-
-  "chaining-bank.random-menu": "Случайная выборка",
-  "chaining-bank.learn-from-text": "Обучиться тексту",
-  "chaining-bank.learn-the-pair": "Обучиться словосочетанию",
-  "chaining-bank.edit-chains": "Редактировать цепочки пар",
-
-  "chaining-bank.learn-the-pair.type-target-word": "Введи первое слово (словосочетание) из пары:",
-  "chaining-bank.learn-the-pair.type-next-word": "Введи второе слово (словосочетание) из пары:",
-  "chaining-bank.learn-the-pair.success": "Готово, пара создана.",
-  "chaining-bank.learn-the-text.send-the-text": "Пришли мне текст, который необходимо изучить (разбить по парам и запомнить).\n\nЗнаки пунктуации для разделения предложений: . ... ! ? ?! !?",
-  "chaining-bank.learn-the-text.success": "Неплохо.",
-
-  "chaining-bank.random-menu.hint": "Выбери количество случайно генерируемых пар слов:",
-  "chaining-bank.random-menu.do-once": "1 пара",
-  "chaining-bank.random-menu.do-3-times": "3 пары",
-  "chaining-bank.random-menu.do-5-times": "5 пар",
-  "chaining-bank.random-menu.do-10-times": "10 пар",
-
-  "language.selection-empty": "Нет доступных языков.",
-  "language.hint": "Выбери язык:",
-  "language.selection.previous": "<<",
-  "language.selection.next": ">>",
-  "language.selection.done": "Текущий язык был выставлен на: :LOCALE",
-
-  "language.selection-error": "Текущий язык недоступен: по-умолчанию будет использован английский язык. Введи 'lang' для просмотра доступных языков.",
-  "unknown-option-selected": "Неизвестная опция была выбрана.",
-  "unexpected-error": "Что-то пошло не так.",
-
-  "unknown-command.phrase-type-menu": "\nВведи 'меню' для просмотра списка доступных команд.",
-  "unknown-command.phrase-1": "Я тебя не понял \uD83D\uDE12",
-  "unknown-command.phrase-2": "Не могу найти подходящий ответ на твоё сообщение \uD83D\uDE12",
-  "unknown-command.phrase-3": "Неизвестная команда.",
-  "unknown-command.phrase-4": "Ну... звучит неплохо, но я тебя не понял.",
-  "unknown-command.phrase-5": "[КОМАНДА НЕ НАЙДЕНА]",
-  "unknown-command.phrase-6": "Воу... Мне даже нечего сказать...",
-  "unknown-command.phrase-7": "Неверный вызов команды."
-
-
-
+    "4-frame-comics-meme.title": "Четырёхблочный мем-комикс",
+    "about": "О версии:\n\nБот Мемич\nℹ️ Версия: :version\n🖥 Работает на PHP :php_version, Botman (Laravel)\n\nСсылки:\n🔸 Вики (справка) - :wiki\n🔸 Telegram - :tg\n🔸 VK - :vk\n🔸 Github - :github\n",
+    "admin-menu.ask-option-type": "👑 Меню:",
+    "admin-menu.manage-banks": "📝 Редактировать банки",
+    "bank-list.create-new-bank": "Создать новый банк",
+    "bank-list.empty-hint": "⚠️ Список пуст",
+    "chain.generic-word": "generic",
+    "chaining-bank.edit-chains": "Редактировать цепочки пар",
+    "chaining-bank.learn-from-text": "Обучиться тексту",
+    "chaining-bank.learn-the-pair": "Обучиться словосочетанию",
+    "chaining-bank.learn-the-pair.success": "Готово, пара создана.",
+    "chaining-bank.learn-the-pair.type-next-word": "Введи второе слово (словосочетание) из пары:",
+    "chaining-bank.learn-the-pair.type-target-word": "Введи первое слово (словосочетание) из пары:",
+    "chaining-bank.learn-the-text.send-the-text": "Пришли мне текст, который необходимо изучить (разбить по парам и запомнить).\n\nЗнаки пунктуации для разделения предложений: . ... ! ? ?! !?",
+    "chaining-bank.learn-the-text.success": "Неплохо.",
+    "chaining-bank.random-menu": "Случайная выборка",
+    "chaining-bank.random-menu.do-10-times": "10 пар",
+    "chaining-bank.random-menu.do-3-times": "3 пары",
+    "chaining-bank.random-menu.do-5-times": "5 пар",
+    "chaining-bank.random-menu.do-once": "1 пара",
+    "chaining-bank.random-menu.hint": "Выбери количество случайно генерируемых пар слов:",
+    "chaining-bank.random-menu.random-result": "Созданные пары слов:\n:list",
+    "choice.no": "Нет",
+    "choice.yes": "Да",
+    "create-bank.ask-if-private": "Сделать доступным для всех? (д\/н)",
+    "create-bank.enter-description": "Введите описание:",
+    "create-bank.enter-title": "Введите название:",
+    "create-comics-meme-conversation.done": "Готово:",
+    "create-comics-meme-conversation.step-1": "[Шаг 1\/8]\nПришли картинку 1го блока.",
+    "create-comics-meme-conversation.step-2": "[Шаг 2\/8]\nПришли картинку 2го блока.",
+    "create-comics-meme-conversation.step-3": "[Шаг 3\/8]\nПришли картинку 3го блока.",
+    "create-comics-meme-conversation.step-4": "[Шаг 4\/8]\nПришли картинку 4го блока.",
+    "create-comics-meme-conversation.step-5": "[Шаг 5\/8]\nВведи текст 1го блока.",
+    "create-comics-meme-conversation.step-6": "[Шаг 6\/8]\nВведи текст 2го блока.",
+    "create-comics-meme-conversation.step-7": "[Шаг 7\/8]\nВведи текст 3го блока.",
+    "create-comics-meme-conversation.step-8": "[Шаг 8\/8]\nВведи текст 4го блока.",
+    "create-demotivational-poster-meme-conversation.done": "Готово:",
+    "create-demotivational-poster-meme-conversation.step-1": "[Шаг 1\/3]\nПришли картинку мема.",
+    "create-demotivational-poster-meme-conversation.step-2": "[Шаг 2\/3]\nВведи заголовок мема.",
+    "create-demotivational-poster-meme-conversation.step-3": "[Шаг 3\/3]\nВведи подзаголовок мема.",
+    "create-meme-conversation.ask-meme-type": "Выберите мем, который будет создан:",
+    "create-meme-conversation.unsupported-meme": "На текущий момент такие мемы я не умею делать, выбери другую категорию.",
+    "create-when-meme-conversation.done": "Готово:",
+    "create-when-meme-conversation.step-1": "[Шаг 1\/3]\nПришли картинку мема.",
+    "create-when-meme-conversation.step-2": "[Шаг 2\/3]\nВведи верхний текст мема.",
+    "create-when-meme-conversation.step-3": "[Шаг 3\/3]\nВведи нижний текст мема.",
+    "demotivational-poster-meme.title": "Демотиватор",
+    "form.sending-error": "⚠️ Ошибка отправки формы: некоторые поля заполнены некорректно.\n\nДетали:\n:details",
+    "generate-meme-conversation.ask-meme-type": "Выбери мем, который будет сгенерирован:",
+    "generate-meme-conversation.generating-error": "Ошибка генерации мема.",
+    "generate-meme-conversation.unknown-command": "Такого пункта меню я не знаю.",
+    "generate-meme-conversation.unsupported-meme": "На текущий момент такие мемы я не умею генерировать, выберите другую категорию.",
+    "generate-meme.edit-bank-list": "✏️Изменить список дата-паков",
+    "generate-meme.execute": "😃 Сгенерировать новый мем",
+    "generate-meme.hint": "Меню генерации мема ':screenName':",
+    "generate-meme.regexp.when-word": "Когда",
+    "greetings": "Хе-хей, привет! Рад, что мне написали.",
+    "language.hint": "Выбери язык:",
+    "language.selection-empty": "Нет доступных языков.",
+    "language.selection-error": "Текущий язык недоступен: по-умолчанию будет использован английский язык. Введи 'lang' для просмотра доступных языков.",
+    "language.selection.done": "Текущий язык был выставлен на: :LOCALE",
+    "language.selection.next": ">>",
+    "language.selection.previous": "<<",
+    "manage-bank.back": "<< Назад",
+    "manage-bank.delete": "🗑 Удалить",
+    "manage-bank.edit": "✏ Редактировать",
+    "manage-bank.enter-new-description": "Введи новое описание:\n(текущее: :Description)",
+    "manage-bank.enter-new-title": "Введи новое наименование:\n(текущее: :Title)",
+    "manage-bank.error-exception": "Что-то пошло не так: ",
+    "manage-bank.info": "ℹ️ Информация о банке (дата-паке).\n\n🆔 ID: :Id\n💬 Наименование: :Title\n📄 Описание: :Description\n🕒 Создано: :Created_at\n🕒 Обновлено: :Updated_at\n👤 ID чата: :Conversation_id\n👤 Наименование чата: :conversation_title",
+    "manage-bank.learn-a-text": "📜 Обучиться словам",
+    "manage-bank.not-found-error": "Дата-пак был перемещен или удалён (не найден).",
+    "manage-bank.push-an-image": "🌅 Добавить картинку",
+    "manage-bank.refresh-info": "🔁 Обновить",
+    "manage-bank.rename-done": "Готово.",
+    "manage-bank.see-full-description": "📄 Полное описание",
+    "menu.back": "<< Назад",
+    "menu.options.about-release": "ℹ️ О версии",
+    "menu.options.admin": "👑️ Админка",
+    "menu.options.create-meme": "🖌 Создать мем",
+    "menu.options.generate-meme": "☺ Сгенерировать мем",
+    "menu.options.manage-banks": "📦 Мои банки",
+    "menu.options.settings": "⚙ Настройки",
+    "menu.title": "Главное меню:",
+    "pagination.next": "Вперёд >>",
+    "pagination.previous": "<< Назад",
+    "pattern.about-conversation": ".*(о боте|о проекте|версия|вер|ver)",
+    "pattern.admin-menu": ".*(админ|админка|управление|пу|меню админа|модерка|модерация|меню модератора|модератор|администратор|admin)",
+    "pattern.cancel-conversation": ".*отмена",
+    "pattern.create-meme-conversation": ".*((создать|запилить|сделать|разработать|нарисовать|построить|скрафтить|собрать|конструктор).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|create_meme)",
+    "pattern.generate-meme-conversation": ".*((сгенерировать|сгенерить|вообразить|аи|новый|генерить).*(мема|мемов|мемы|мем|пикчи|картинки|изображения)|generate_meme)",
+    "pattern.language-selection": ".*(сменить язык|язык|локализация|смена языка|изменить язык|выбор языка)",
+    "pattern.manage-banks": ".*(банки|банк|мои банки|редактировать банки|дата-паки|датапаки|manage_banks)",
+    "pattern.menu-start": ".*(начать|меню|главное меню|главная|менюшка|менюха|главное_меню|main_menu)",
+    "settings-types.color.description": "Цвет текста в мемах (применяется только для этой беседы).",
+    "settings-types.color.title": "Цвет текста",
+    "settings-types.demotivational.bg.color.description": "Настройка цвета фона мема-демотиватора.",
+    "settings-types.demotivational.bg.color.title": "Цвет фона демотиватора",
+    "settings-types.demotivational.border.color.description": "Настройка цвета рамки мема-демотиватора.",
+    "settings-types.demotivational.border.color.title": "Цвет рамки демотиватора",
+    "settings-types.font.description": "Шрифт текста в мемах (применяется только для этой беседы).",
+    "settings-types.font.title": "Шрифт текста",
+    "settings-types.shadow.color.description": "Цвет тени текста в мемах (применяется только для этой беседы).",
+    "settings-types.shadow.color.title": "Цвет тени",
+    "settings-types.show-author.description": "Указать платформу чата, ID, имя и фамилию (или просто ник) текущего пользователя в описании мема. \nПримечание: отметка применима только к сгенерированным мемам, созданные пользователями мемы не находятся в публичном доступе.",
+    "settings-types.show-author.title": "Отметить меня",
+    "skip": "⤵️ Пропустить",
+    "unexpected-error": "Что-то пошло не так.",
+    "unknown-command.phrase-1": "Я тебя не понял 😒",
+    "unknown-command.phrase-2": "Не могу найти подходящий ответ на твоё сообщение 😒",
+    "unknown-command.phrase-3": "Неизвестная команда.",
+    "unknown-command.phrase-4": "Ну... звучит неплохо, но я тебя не понял.",
+    "unknown-command.phrase-5": "[КОМАНДА НЕ НАЙДЕНА]",
+    "unknown-command.phrase-6": "Воу... Мне даже нечего сказать...",
+    "unknown-command.phrase-7": "Неверный вызов команды.",
+    "unknown-command.phrase-type-menu": "\nВведи 'меню' для просмотра списка доступных команд.",
+    "unknown-option-selected": "Неизвестная опция была выбрана.",
+    "when-meme.title": "Мем 'Когда...'"
 }
