Front-end auth screen, welcome page edit

--- a/resources/frontend/app/src/locales/ru.json
+++ b/resources/frontend/app/src/locales/ru.json
@@ -32,6 +32,9 @@
         "usage": "Как использовать бота",
         "api": "API"
       }
+    },
+    "auth": {
+      "page_title": "Авторизация"
     }
   }
 
